--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "2.1.5",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,8 +30,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
-  }
+  ]
 }
