--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,9 @@
     "react-scripts": "2.1.5",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.2.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
